--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style_test.css">
     <title>Document</title>
 </head>
 
@@ -47,6 +48,25 @@
                 <!-- texto que no es parte de un parrafo-->
             </article>
             <img src="" alt="img ejemplo">
+        </section>
+        <section>
+            <div class="contenedorconmargin">div 1</div>
+            <div class="contenedor-divs">
+                <div class="cont">1</div>
+                <div class="cont">2</div>
+                <div class="cont">3</div>
+                <div class="cont">4</div>
+                <div class="cont">5</div>
+                <div class="cont">6</div>
+            </div>
+            <div class="contenedorFlex">
+                <div class="contf">1</div>
+                <div class="contf">2</div>
+                <div class="contf">3</div>
+                <div class="contf">4</div>
+                <div class="contf">5</div>
+                <div class="contf">6</div>
+            </div>
         </section>
     </main>
     <footer>
