--- a/form.html
+++ b/form.html
@@ -5,17 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style_test.css">
     <title>Document</title>
+    <!--<style>
+        button {
+            background-color: brown;
+            /*color de fondo*/
+            color: white;
+            /*color de letra*/
+        }
+    </style> -->
 </head>
 
 <body>
     <a href="./test.html">volver</a>
+    <p class="parrafoR">hola1</p>
+    <p class="parrafoB">hola2</p>
+    <p class="parrafoB fondoverde">hola3</p>
     <form>
         <label for="nombre">Nombre</label>
         <!--For -> relaciona el label con el input-->
         <input name="nombre" type="text" placeholder="ej:dan">
         <label for="apellido">Apellido</label>
         <input name="apellido" type="text">
+        <button type="submit" id="enviar">Enviar</button>
+        <button type="reset">reiniciar</button>
     </form>
 </body>
 
